src/main/ANTLR/Zeit.g4
grammar Zeit;


zeit: (einheit SEPERATOR einheit) | (einheit SEPERATOR einheit SEPERATOR einheit);

einheit: DIGIT DIGIT;

SEPERATOR: ':';

DIGIT: [0-9];







/*zeit: STUNDEN ':' MINUTEN;

STUNDEN: [0-2][0-9];

MINUTEN: [0-5][0-9];

SEPERATOR: ':';

DIGIT: [0-9];*/
